tests/invalid/no_label.s
  .text

  .global _start
_start:
  nop
  call func
  nop
